--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
+beautifulsoup4==4.12.2
 black==23.3.0
-click==8.1.4
-colorama==0.4.6
-mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.8.1
+pymongo==4.4.0
+requests==2.31.0
